--- a/fake-bilibili-api/pom.xml
+++ b/fake-bilibili-api/pom.xml
@@ -16,6 +16,12 @@
             <groupId>org.example</groupId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>fake-bilibili-dao</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
