--- a/fake-bilibili-api/src/main/resources/application.properties
+++ b/fake-bilibili-api/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.redis.port=6667
 spring.redis.password=123456
 
 
+# tomcat限制了最大文件大小为1048576 bytes
+# 修改最大上传单个文件大小
+spring.servlet.multipart.max-file-size=1024MB
