--- a/fake-bilibili-api/src/main/resources/application.properties
+++ b/fake-bilibili-api/src/main/resources/application.properties
@@ -3,8 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/fake-bilibili?useUnicode=true&
 spring.datasource.username=root
 spring.datasource.password=ffaarr002
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-
+        
 #mybatis
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.bilibili.dao
@@ -14,11 +13,16 @@ mybatis.type-aliases-package=com.bilibili.dao
 rocketmq.name.server.address=127.0.0.1:9876
 
 #redis
-spring.redis.host=127.0.0.1
-spring.redis.port=6667
-spring.redis.password=123456
+#spring.redis.host=127.0.0.1
+#spring.redis.port=6667
+#spring.redis.password=123456
 
 
 # tomcat限制了最大文件大小为1048576 bytes
 # 修改最大上传单个文件大小
 spring.servlet.multipart.max-file-size=1024MB
+
+
+#fastdfs
+#fdfs.http.storage-addr=http://39.107.54.180:8888/group1/
+
